# keel

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/desktop-host/: package.json  webview.config.json
apps/desktop-host/src/: dev.mjs
apps/native-shells/: README.md
apps/native-shells/macos/: Package.swift
apps/native-shells/windows/: App.xaml  App.xaml.cs  Keel.WindowsShell.csproj  MainWindow.xaml  MainWindow.xaml.cs
apps/node-backend/: package.json
apps/node-backend/src/: main.mjs  service.mjs
apps/web-frontend/: index.html  package.json  server.mjs  tsconfig.json  vite.config.ts
apps/web-frontend/src/: App.tsx  index.css  main.tsx
crates/keel-capabilities/: Cargo.toml
crates/keel-capabilities/src/: lib.rs
crates/keel-extension-sdk/: Cargo.toml
crates/keel-extension-sdk/src/: lib.rs
crates/keel-protocol/: Cargo.toml
crates/keel-protocol/src/: generated.rs  (+1 more)
docs/: extension-authoring.md  raycast-deep-dive-notes.md  webview-hosting.md
extensions/rust/hello-world/: Cargo.toml  manifest.json
extensions/rust/hello-world/src/: main.rs
protocol/: keel.schema.json
test/: backend-service.test.mjs  backend.test.mjs  host-config.test.mjs  js-extension-sdk.test.mjs  native-bridge.test.mjs  native-shells.test.mjs  protocol.test.mjs  runtime.test.mjs  ui-server.test.mjs
tools/: check-workspace.mjs  generate-protocol.mjs
(+11 files in other folders)
