[package]
name = "keel_hello_world_extension"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
keel-extension-sdk = { path = "../../../crates/keel-extension-sdk" }
keel-protocol = { path = "../../../crates/keel-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
